# Tools

.github/workflows/: helloworld.yaml
Bazel/try-cpp/: .gitignore  BUILD  WORKSPACE.bazel  main.cpp
Bazel/try-cpp/lib/: BUILD  current_time.cpp  current_time.h
Bazel/try-cpp/main/: main.cpp  output.cpp  output.h
Bazel/try-cpp/test/: BUILD  test.cpp
DockerKubernetes/: README.md
DockerKubernetes/Section4/: Dockerfile  README.md  docker-entrypoint.sh
DockerKubernetes/Section5/: centos.yaml  debug.yaml  file.yaml  logs.yaml  sample_debug.txt  test.yaml
DockerKubernetes/Section6/: configmap.yaml  deployment.yaml  keyfile  pod.yaml  replicaset.yaml  secret.yaml  service.yaml
aws/: README.md
aws/AWS_EC2_and_Flask/: README.md
aws/CoursesOnUdemy/: README.md
aws/udemy_basic/: README.md  cloudfomation.yaml
aws/udemy_copilot_cli/: README.md
aws/udemy_copilot_cli/udemy-aws-container/copilot/environments/test/: manifest.yml
aws/udemy_copilot_cli/udemy-aws-container/copilot/myservice/: manifest.yml
curl/: README.md  youtube_curl_api.md  youtube_curl_basic.md
curl/get_logs/: google.html
openai_api/: pyproject.toml
openai_api/src/: guidance_tutorial.py
