[tool.poetry]
name = "openai-api"
version = "0.1.0"
description = ""
authors = ["S.tatsuya <s.tatsuya0123@gmail.com>"]
readme = "README.md"
packages = [{include = "openai_api"}]

[tool.poetry.dependencies]
python = "3.10.*"
openai = "^0.27.8"
guidance = "^0.0.64"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
